2011-08-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
	    Ian Lance Taylor  <iant@google.com>

	* math/libm-test.inc (lround_test): New testcase.
	* sysdeps/ieee754/dbl-64/s_lround.c (__lround): Don't lose precision.

2011-09-08  Ulrich Drepper  <drepper@gmail.com>

	* Makefile: Remove support for automatic cvs check-ins.
	* Makerules: Likewise.
	* config.make.in: Likewise.
	* configure.in: Likewise.
	* intl/Makefile: Likewise.
	* locale/Makefile: Likewise.
	* po/Makefile: Likewise.
	* posix/Makefile: Likewise.
	* sysdeps/gnu/Makefile: Likewise.
	* sysdeps/mach/hurd/Makefile: Likewise.
	* sysdeps/sparc/sparc32/Makefile: Likewise.

	[BZ #13118]
	* posix/Makefile (bug-regex32-ENV): Define.
	Patch by John Stanley <jpsinthemix@verizon.net>.

	* misc/Makefile (headers): Add bits/select2.h.
	* misc/sys/select.h: Include bits/select2.h for _FORTIFY_SOURCE.
	* misc/bits/select2.h: New file.
	* include/bits/select2.h: New file.
	* debug/Makefile (routines): Add fdelt_chk.
	* debug/Versions: Export __fdelt_chk and __fdelt_warn for GLIBC_2.15.
	* debug/tst-chk1.c (do_test): Add tests for FD_SET, FD_CLR, and
	FD_ISSET.
	* debug/fdelt_chk.c: New file.

	* wcsmbs/test-wcscmp.c: Moved from string/*.  Adjust.
	* wcsmbs/test-wmemcmp.c: Likewise.
	* string/Makefile (strop-tests): Remove wcscmp and wmemcmp.
	* wcsmbs/Makefile (strop-tests): Add wcscmp and wmemcmp.

2011-09-08  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* string/Makefile (strop-tests): Add memcmp.
	* string/test-wmemcmp.c: New file.
	* string/test-memcmp.c: Add wmemcmp support.

2011-09-08  Roland McGrath  <roland@hack.frob.com>

	[BZ #13153]
	* manual/libc.texinfo (EDITION, VERSION, UPDATED): Update for
	2011-07-19 change.

	* sysdeps/mach/hurd/fork.c (__fork): Initialize REFS so we don't use a
	garbage value in a __mach_port_mod_refs call in the cases of the
	task-self and thread-self ports.

2011-09-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/sys/param.h (DEV_BSIZE): New macro.
