@@ -1,3 +1,7 @@
+2011-08-17  Andreas Jaeger  <aj@suse.de>
+
+	* elf/sprof.c (load_shobj): Remove unused variable log_hashfraction.
+
 2011-08-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
 	    Ian Lance Taylor  <iant@google.com>
 
